WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242045
AX: FrameView::removeFromAXObjectCache() is not always successful because FrameView::axObjectCache() sometimes returns null
https://bugs.webkit.org/show_bug.cgi?id=242045
Summary
AX: FrameView::removeFromAXObjectCache() is not always successful because Fra...
Tyler Wilcock
Reported
2022-06-27 20:26:08 PDT
This results in iframes (and therefore AccessibilityScrollViews) not always being cleaned up.
Attachments
Patch
(5.56 KB, patch)
2022-06-27 20:38 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(5.70 KB, patch)
2022-06-28 10:06 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-06-27 20:26:16 PDT
<
rdar://problem/96032479
>
Tyler Wilcock
Comment 2
2022-06-27 20:38:41 PDT
Created
attachment 460512
[details]
Patch
Tyler Wilcock
Comment 3
2022-06-27 20:44:33 PDT
rdar://95566703
Tyler Wilcock
Comment 4
2022-06-28 10:06:31 PDT
Created
attachment 460518
[details]
Patch
EWS
Comment 5
2022-06-28 14:12:32 PDT
Committed
251924@main
(fb36a8004ac8): <
https://commits.webkit.org/251924@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460518
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug