AX: FrameView::removeFromAXObjectCache() is not always successful because FrameView::axObjectCache() sometimes returns null https://bugs.webkit.org/show_bug.cgi?id=242045

Reviewed by Chris Fleizach and Andres Gonzalez.

Prior to this patch, FrameView::axObjectCache() only checks for an
existing AXObjectCache within the document of the current frame (which
could be an iframe). Often there is no cache associated with an iframe,
meaning callers FrameView::axObjectCache() (like FrameView::removeFromAXObjectCache())
would sometimes fail.

This resulted in invalid AccessibilityScrollViews remaining un-deleted, where being
invalid means the lack of a renderer. A renderer is required to retrieve a non-null
AccessibilityScrollView::parentObject.

These invalid AccessibilityScrollViews were included in updates to the
isolated tree, and because they returned a null parent, we set them as
the root node, breaking the entire isolated tree hierarchy and making
all page content inaccessible.

In this patch, FrameView::axObjectCache() now checks for an existing
AXObjectCache in the main-frame document if we can't get a cache from
the iframe document.

No test added as I wasn't able to make one reproducing the issue.

* Source/WebCore/accessibility/AccessibilityImageMapLink.cpp:
(WebCore::AccessibilityImageMapLink::parentObject const):
* Source/WebCore/accessibility/AccessibilityMockObject.h:
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.h:
* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::axObjectCache const):

Canonical link: https://commits.webkit.org/251924@main